--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
