--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
+    "localtunnel": "^2.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
